<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_M4K4_RTD" Id="{19277b42-a3a6-4fd4-a7a6-d9afc99a2052}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    // M4K4 RTDs
	{attribute 'TcLinkTo' := 'TIIB[EL3204_M4K4]^RTD Inputs Channel 1^Value'}
	nM4K4_Chin_Left_RTD AT %I* : INT;
	{attribute 'TcLinkTo' := 'TIIB[EL3204_M4K4]^RTD Inputs Channel 2^Value'}
	nM4K4_Chin_Right_RTD AT %I* : INT;
	{attribute 'TcLinkTo' := 'TIIB[EL3204_M4K4]^RTD Inputs Channel 3^Value'}
	nM4K4_Tail_RTD AT %I* : INT;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>