<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_M5K4_RTD" Id="{7da8d654-bc66-492d-b09d-2d3413fe1442}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    // M5K4 RTDs
	{attribute 'TcLinkTo' := 'TIIB[EL3204_M5K4]^RTD Inputs Channel 1^Value'}
	nM5K4_Chin_Left_RTD AT %I* : INT;
	{attribute 'TcLinkTo' := 'TIIB[EL3204_M5K4]^RTD Inputs Channel 2^Value'}
	nM5K4_Chin_Right_RTD AT %I* : INT;
	{attribute 'TcLinkTo' := 'TIIB[EL3204_M5K4]^RTD Inputs Channel 3^Value'}
	nM5K4_Tail_RTD AT %I* : INT;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>