<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_Environment" Id="{d7d13681-7518-4597-8191-c148d0adcca3}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_Environment
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// DREAM KB Internal RTDs
    GVL_M4K4_RTD.nM4K4_Chin_Left_RTD();
    GVL_M4K4_RTD.nM4K4_Chin_Right_RTD();
    GVL_M4K4_RTD.nM4K4_Chin_Tail_RTD();

    GVL_M5K4_RTD.nM5K4_Chin_Left_RTD();
    GVL_M5K4_RTD.nM5K4_Chin_Right_RTD();
    GVL_M5K4_RTD.nM5K4_Chin_Tail_RTD();]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>